feat: remove depricated methode